<resources>
    <string name="app_name">개밥타임</string>
    <string name="btn_register">등록</string>
    <string name="radioBtn_meal">식사</string>
    <string name="radioBtn_snack">간식</string>
    <string name="tv_meal_start_time">시작 시간</string>
    <string name="tv_meal_end_time">완료 시간</string>
    <string name="tv_select_time">👉 여기를 눌러 시간을 선택해주세요</string>
    <string name="delete">삭제</string>
    <string name="tv_meal_name">알람 이름</string>
    <string name="et_meal_hint">이름을 입력해주세요</string>
    <string name="tv_meal_type">급식 종류</string>
    <string name="btn_setup">알림추가</string>
    <string name="dialog_delete_time">삭제하시겠습니까?</string>
    <string name="dialog_check_meal">정말 밥을 줬나요?🤔</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="time">시간</string>
    <string name="meal_add_caption">알람을 등록해보세요!</string>
    <string name="common_meal">🍖 식사</string>
    <string name="common_snack">🥫 간식</string>
    <string name="common_medicine">💊 약</string>
    <string name="common_complete">완료!</string>
    <string name="alarm_time">알림시간</string>
    <string name="user_register">프로필을 선택해주세요</string>
    <string name="common_meal_surve">식사를 주셨나요?!</string>
    <string name="common_snack_surve">간식을 주셨나요?!</string>
    <string name="common_medicine_surve">약을 주셨나요?!</string>
    <string name="meal_cancle">취소 할까요?</string>
    <string name="meal_complete">완료 하셨나요?</string>
</resources>
